# lpkg

./: .gitignore  Cargo.toml  README.md  TZ.txt
docs/: build-and-install.md  package-structure.md
src/: cli.rs  consts.rs  db.rs  error.rs  fs.rs  info.rs  install.rs  lib.rs  log.rs  main.rs  meta.rs  package.rs  remove.rs  traits.rs
